[gd_scene load_steps=19 format=2]

[ext_resource path="res://UI/inventory/panel.png" type="Texture" id=1]
[ext_resource path="res://UI/inventory/inventory.gd" type="Script" id=2]
[ext_resource path="res://UI/inventory/weapon_slot/weapon_slot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ability/Modules/AttackSpeed/AttackSpeed.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ability/Modules/Gigantic/icon.png" type="Texture" id=5]
[ext_resource path="res://Fonts/dpcomic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Ability/Modules/AttackSpeed/icon.png" type="Texture" id=7]
[ext_resource path="res://UI/inventory/slot/module_slot.tscn" type="PackedScene" id=8]
[ext_resource path="res://Ability/Modules/Gigantic/Gigantic.tscn" type="PackedScene" id=9]
[ext_resource path="res://Ability/Modules/IncreaseDamage/icon.png" type="Texture" id=10]
[ext_resource path="res://Ability/Modules/IncreaseDamage/IncreaseDamage.tscn" type="PackedScene" id=11]
[ext_resource path="res://Ability/Modules/Speed/Speed.tscn" type="PackedScene" id=12]
[ext_resource path="res://Ability/Modules/Speed/icon.png" type="Texture" id=13]
[ext_resource path="res://Ability/Projectile/Modules/CircularDirection/icon.png" type="Texture" id=14]
[ext_resource path="res://Ability/Projectile/Modules/CircularDirection/CircularDirection.tscn" type="PackedScene" id=15]
[ext_resource path="res://Ability/Modules/LifeTime/icon.png" type="Texture" id=16]
[ext_resource path="res://Ability/Modules/LifeTime/LifeTime.tscn" type="PackedScene" id=17]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 6 )

[node name="Inventory" type="Control"]
pause_mode = 2
rect_scale = Vector2( 0.8, 0.8 )
script = ExtResource( 2 )

[node name="TextureRect2" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1130.0
margin_top = -1270.0
margin_right = 2870.0
margin_bottom = 2730.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 166.25
margin_top = -2.25
margin_right = 414.25
margin_bottom = 61.75
custom_fonts/font = SubResource( 1 )
text = "MODULES"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
pause_mode = 2
margin_left = 45.0
margin_top = 50.0
margin_right = 555.0
margin_bottom = 678.0

[node name="Modules" type="GridContainer" parent="ScrollContainer"]
margin_right = 490.0
margin_bottom = 230.0
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 4

[node name="AttackSpeed" parent="ScrollContainer/Modules" instance=ExtResource( 8 )]
module_node = ExtResource( 4 )

[node name="TextureRect" parent="ScrollContainer/Modules/AttackSpeed" index="0"]
texture = ExtResource( 7 )

[node name="Gigantic" parent="ScrollContainer/Modules" instance=ExtResource( 8 )]
margin_left = 130.0
margin_right = 230.0
module_node = ExtResource( 9 )

[node name="TextureRect" parent="ScrollContainer/Modules/Gigantic" index="0"]
texture = ExtResource( 5 )

[node name="IncreaseDamage" parent="ScrollContainer/Modules" instance=ExtResource( 8 )]
margin_left = 260.0
margin_right = 360.0
module_node = ExtResource( 11 )

[node name="TextureRect" parent="ScrollContainer/Modules/IncreaseDamage" index="0"]
texture = ExtResource( 10 )

[node name="Speed" parent="ScrollContainer/Modules" instance=ExtResource( 8 )]
margin_left = 390.0
margin_right = 490.0
module_node = ExtResource( 12 )

[node name="TextureRect" parent="ScrollContainer/Modules/Speed" index="0"]
texture = ExtResource( 13 )

[node name="CircularDirection" parent="ScrollContainer/Modules" instance=ExtResource( 8 )]
margin_top = 130.0
margin_bottom = 230.0
module_node = ExtResource( 15 )

[node name="TextureRect" parent="ScrollContainer/Modules/CircularDirection" index="0"]
texture = ExtResource( 14 )

[node name="LifeTime" parent="ScrollContainer/Modules" instance=ExtResource( 8 )]
margin_left = 130.0
margin_top = 130.0
margin_right = 230.0
margin_bottom = 230.0
module_node = ExtResource( 17 )

[node name="TextureRect" parent="ScrollContainer/Modules/LifeTime" index="0"]
texture = ExtResource( 16 )

[node name="Label2" type="Label" parent="."]
margin_left = 162.5
margin_top = 567.0
margin_right = 410.5
margin_bottom = 631.0
custom_fonts/font = SubResource( 1 )
text = "WEAPONS"

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_left = 45.0
margin_top = 642.25
margin_right = 555.0
margin_bottom = 930.25

[node name="Weapons" type="GridContainer" parent="ScrollContainer2"]
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 4

[node name="Current_setup" type="Control" parent="."]
margin_left = 671.25
margin_top = 832.5
margin_right = 711.25
margin_bottom = 872.5
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="Current_setup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 146.0
margin_top = 19.0
margin_right = 896.0
margin_bottom = 194.0
grow_vertical = 0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 8

[node name="WeaponSlot" parent="Current_setup" instance=ExtResource( 3 )]
margin_left = 30.0
margin_top = 16.0
margin_right = 130.0
margin_bottom = 116.0
description_position = 0

[node name="Item_list" type="GridContainer" parent="."]
margin_left = 2142.5
margin_top = -103.75
margin_right = 2346.5
margin_bottom = 1452.25
columns = 2

[editable path="ScrollContainer/Modules/AttackSpeed"]
[editable path="ScrollContainer/Modules/Gigantic"]
[editable path="ScrollContainer/Modules/IncreaseDamage"]
[editable path="ScrollContainer/Modules/Speed"]
[editable path="ScrollContainer/Modules/CircularDirection"]
[editable path="ScrollContainer/Modules/LifeTime"]
